--- a/index.html
+++ b/index.html
@@ -5,12 +5,19 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Website</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Введите текст</title>
 </head>
-<h1>Шо ты лысый, плаки плаки</h1>
 <body>
-<img src="wide_4_3_89c246eebbbd2dc6613d99253ae54d3d.jpg" alt="">
-<a href="https://www.youtube.com/watch?v=nybtOIxlku8">Перемога посилання</a>
-<a href="https://www.youtube.com/watch?v=46qgy_kZI9w">Тапай тапай!</a>
+    <aside>
+        <h1>Игры онлайн</h1>
+    </aside>
+
+    <ul>
+        <li><a href="https://vseigru.net/hamster-kombat/44679-igra-hamster-kombat-2-kripto.html">Тапать гомяка онлайн😈😈😈</a> </li>
+        <li><a href="https://smashkarts.io/">Дерби (онлайн)</a> </li>
+        <li><a href="https://www.google.com/imgres?q=%D0%B7%D0%B4%D0%B5%D1%81%D1%8C%20%D0%BC%D0%BE%D0%B6%D0%B5%D1%82%20%D0%B1%D1%8B%D1%82%D1%8C%20%D0%B2%D0%B0%D1%88%D0%B0%20%D1%80%D0%B5%D0%BA%D0%BB%D0%B0%D0%BC%D0%B0&imgurl=https%3A%2F%2Fsun9-52.userapi.com%2Fimpg%2Fym0jEwjDDAbGcMwJdSwYK0r-zcu4bsrT01V4Gg%2Fh66lry2du7o.jpg%3Fsize%3D604x604%26quality%3D96%26sign%3D1bdf23b88ff3cd4dda520f94ce71a158%26type%3Dalbum&imgrefurl=https%3A%2F%2Fcdn.sport4.ru%2Fblog%2Fpost%2Fzdes-mogla-bi-bit-vasha-reklama-kartinki&docid=7A4LUwwZ_sMUhM&tbnid=2bRFBNSGTG4FWM&vet=12ahUKEwjlidb71YiJAxVJU1UIHaRjHRgQM3oECE0QAA..i&w=604&h=604&hcb=2&ved=2ahUKEwjlidb71YiJAxVJU1UIHaRjHRgQM3oECE0QAA">Сдесь может быть ваша реклама</a> </li>
+    </ul>
+
 </body>
 </html>
