--- a/front-end/main.html
+++ b/front-end/main.html
@@ -8,15 +8,9 @@
     <title>Введите текст</title>
 </head>
 <body>
-
-<form action="/result" method="GET">
-    <select> name="product">
-        <option value="Яблоко">Яблоко</option>
-        <option value="Груша">Груша</option>
-        <option value="Помидор">Помидор</option>
-    </select>
-    <input type="submit" value="Send">
-</form>
+    <div class="container">
+    <p class="text">Головна</p>
+    </div>
 
 </body>
 </html>
